force-app/main/default/objects/LDCT_speaker_and_product__c/LDCT_speaker_and_product__c.object-meta.xml
<CustomObject>
    <label>LDCT Speaker and Product</label>
    <nameField>
        <displayFormat>Speaker_Section-{0000}</displayFormat>
        <label>LDCT speaker and product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LDCT Speaker and Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>