force-app/main/default/objects/LDCT_speaker_and_product__c/fields/Head_of_PM__c.field-meta.xml
<CustomField>
    <fullName>Head_of_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head of PM</label>
    <type>Checkbox</type>
</CustomField>