force-app/main/default/objects/LDCT_speaker_and_product__c/fields/LDCT_Project__c.field-meta.xml
<CustomField>
    <fullName>LDCT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDCT Project</label>
    <referenceTo>LDCT_Project__c</referenceTo>
    <relationshipLabel>LDCT Speaker and Products</relationshipLabel>
    <relationshipName>LDCT_Speaker_and_Products</relationshipName>
    <type>Lookup</type>
</CustomField>