force-app/main/default/objects/LDCT_speaker_and_product__c/fields/Manage_the_fund_since__c.field-meta.xml
<CustomField>
    <fullName>Manage_the_fund_since__c</fullName>
    <label>Manages the fund since (Year)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>