force-app/main/default/objects/LDCT_speaker_and_product__c/fields/Manage_the_fund_since_Full_date__c.field-meta.xml
<CustomField>
    <fullName>Manage_the_fund_since_Full_date__c</fullName>
    <label>Manage the fund since (Full date)</label>
    <type>Date</type>
</CustomField>