force-app/main/default/objects/LDCT_speaker_and_product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Produit__c</referenceTo>
    <relationshipName>Project_Speaker_and_Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>