force-app/main/default/objects/LDCT_speaker_and_product__c/fields/Title_ptf__c.field-meta.xml
<CustomField>
    <fullName>Title_ptf__c</fullName>
    <label>Title ptf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Analyste</fullName>
                <isActive>false</isActive>
                <label>Analyste</label>
            </value>
            <value>
                <fullName>Gestionnaire de Portefeuille</fullName>
                <isActive>false</isActive>
                <label>Gestionnaire de Portefeuille</label>
            </value>
            <value>
                <fullName>Gestionnaire de Portefeuille Senior</fullName>
                <isActive>false</isActive>
                <label>Gestionnaire de Portefeuille Senior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>